cp project/force-app/main/default/objects/Round_Robin_Config__mdt/fields/Fallback_Username__c.field-meta.xml
<CustomField>
    <fullName>Fallback_Username__c</fullName>
    <description>Username or fallback identifier if no eligible active user is found</description>
    <label>Fallback Username</label>
    <length>80</length>
    <type>Text</type>
</CustomField>