cp project/force-app/main/default/objects/Round_Robin_Config__mdt/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <description>Target City or Location name (e.g. Bengaluru, Hyderabad, Pune, Chennai, or DEFAULT)</description>
    <label>Location</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>