cp project/force-app/main/default/objects/Round_Robin_Config__mdt/fields/Profile_Names__c.field-meta.xml
<CustomField>
    <fullName>Profile_Names__c</fullName>
    <description>Comma-separated list of User Profile names eligible for this team (e.g. Standard User)</description>
    <label>Profile Names</label>
    <length>255</length>
    <type>Text</type>
</CustomField>