cp project/force-app/main/default/objects/Round_Robin_Config__mdt/fields/Role_Developer_Names__c.field-meta.xml
<CustomField>
    <fullName>Role_Developer_Names__c</fullName>
    <description>Comma-separated list of User Role Developer Names eligible for this team (e.g. Salesman,Marketing_Team)</description>
    <label>Role Developer Names</label>
    <length>255</length>
    <type>Text</type>
</CustomField>