cp project/force-app/main/default/objects/Round_Robin_Config__mdt/fields/Team_Name__c.field-meta.xml
<CustomField>
    <fullName>Team_Name__c</fullName>
    <label>Team Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>