cp project/force-app/main/default/objects/Round_Robin_Config__mdt/fields/User_City__c.field-meta.xml
<CustomField>
    <fullName>User_City__c</fullName>
    <description>City to filter User records on (e.g. Bengaluru, Hyderabad, Pune, Chennai)</description>
    <label>User City</label>
    <length>80</length>
    <type>Text</type>
</CustomField>