cp project/force-app/main/default/objects/Round_Robin_Config__mdt/fields/User_Department__c.field-meta.xml
<CustomField>
    <fullName>User_Department__c</fullName>
    <description>Department to filter User records on (e.g. Sales, Marketing)</description>
    <label>User Department</label>
    <length>80</length>
    <type>Text</type>
</CustomField>